<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivty"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fut_kit4"
            android:textSize="30dp"
            android:textColor="#000"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/the_best_shop_for_football_kits"
            android:textStyle="bold"
            android:textColor="#272727"
            android:layout_marginTop="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:cardCornerRadius="15dp"
            android:layout_marginTop="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="117dp"
                android:background="@color/laurelgreen"
                android:padding="10dp"
                android:onClick="goTonationalshirts">

                <TextView
                    android:id="@+id/national_kits"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/national_teams"
                    android:textColor="#ffff"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="191dp"
                    android:layout_marginEnd="10dp"
                    android:maxHeight="100dp"
                    android:src="@drawable/nationalteamsside" />


            </RelativeLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <!---second one-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:cardCornerRadius="15dp"
            android:layout_marginTop="20dp"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="117dp"
                android:background="@color/teal_200"
                android:padding="10dp"
                android:onClick="goToFootballShirts"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="Teams shirts "
                    android:textColor="#ffff"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="118dp"
                    android:layout_height="94dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="191dp"
                    android:layout_marginEnd="10dp"
                    android:maxHeight="100dp"
                    android:src="@drawable/footballkits" />


            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:cardCornerRadius="15dp"
            android:layout_marginTop="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="117dp"
                android:background="@color/purple"
                android:padding="10dp"
                android:onClick="goTospecialeddition"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="special edition"
                    android:textColor="#ffff"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="118dp"
                    android:layout_height="94dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="191dp"
                    android:layout_marginEnd="10dp"
                    android:maxHeight="100dp"
                    android:src="@drawable/mardona" />


            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</LinearLayout>

